Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
-
0.4.10-dev-502-gd559ca9
Description
In the past our desk.cpl ran perfectly fine in Windows XP SP3.
Since some recent shim / apiset refactoring, it does not longer run, because it now depends on advapi32_Vista.dll
I tested desk.cpl from 0.4.11-dev-890-g3050d93 gcc dbg build.
The app does not start at all anymore and also presents no messagebox.
Please allow it to run again.
Attachments
Issue Links
- is cloned by
-
CORE-18168 Our desk.cpl does not start on Windows XP (again)
-
- Resolved
-