[0.4.10][DESK][SHELL32] Allow Desk.cpl to run standalone on WinXP/2003 again

CORE-15412

addendum to 0.4.10-dev-502-g d559ca9

That copy-paste was done once intentionally to keep our imports similar to 2003.
It's worth reading the conversation in PR #748: Getequ seems to be ok with this.

The ideal solution most likely would be to instead *statically*
link against RegLoadMUIStringW() from advapi32_vista when WINNT=0x502.
For now the stuff runs again at least.
I left the func existing in advapi32_vista.dll.

fix picked from commit 0.4.12-dev-99-g 6f8cb05